@@ -24,6 +24,7 @@
 
   CHANGED: the panel startup is profile based instead of directory based
 
+    FIXED: [ 1186534 ] problems with the new network connection (port, path, password, username)
     FIXED: renaming does not change the view, until VFS sends a signal about the rename actually being done
     FIXED: [ 1174273 ] updating the status bar at pressing the arrow keys
     FIXED: calcspace and diskusage shows the same size
